fix backdrop blur on mobile nav

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,7 @@ a:focus-visible, button:focus-visible, input:focus-visible, select:focus-visible
 @media (prefers-reduced-motion: reduce) {
   * { animation-duration: 0.01ms !important; animation-iteration-count: 1 !important; transition-duration: 0.01ms !important; }
 }
+
+.mobile-nav-background{
+  --tw-backdrop-blur: blur(0px)!important;
+}
